<resources>
    <string name="app_name">TestDrivenTutor</string>
    <string name="message_empty_username_password">Please check Username and Password</string>
    <string name="message_max_login_attempt">You Have exceeded MAX Attempt</string>
    <string name="message_login_success">Login Successfully</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="login">Login</string>
</resources>
